// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionGraph renders 0 on graph 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Circle
      animated={true}
      borderColor="#008EE2"
      borderWidth={0}
      color="#008EE2"
      progress={0}
      showsText={false}
      size={70}
      testID="submissions.submission-graph.submissions.submissionGraph.undefined-progress-view"
      thickness={7}
      unfilledColor="#F5F5F5"
    />
  </View>
  <Text
    style={
      Object {
        "flex": 1,
        "fontSize": 12,
        "fontWeight": "500",
        "marginTop": 8,
        "textAlign": "center",
      }
    }
    testID="submissions.submission-graph.submissions.submissionGraph.undefined-title-lbl"
  >
    foo
  </Text>
  <View
    style={
      Object {
        "flex": 1,
        "position": "absolute",
        "top": 25.5,
      }
    }
  >
    <Counter
      end={0}
      start={0}
      style={
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
          "fontWeight": "500",
        }
      }
      time={500}
    />
  </View>
</View>
`;

exports[`SubmissionGraph renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Circle
      animated={true}
      borderColor="#008EE2"
      borderWidth={0}
      color="#008EE2"
      progress={0}
      showsText={false}
      size={70}
      testID="submissions.submission-graph.submissions.submissionGraph.undefined-progress-view"
      thickness={7}
      unfilledColor="#F5F5F5"
    />
  </View>
  <Text
    style={
      Object {
        "flex": 1,
        "fontSize": 12,
        "fontWeight": "500",
        "marginTop": 8,
        "textAlign": "center",
      }
    }
    testID="submissions.submission-graph.submissions.submissionGraph.undefined-title-lbl"
  >
    foo
  </Text>
  <View
    style={
      Object {
        "flex": 1,
        "position": "absolute",
        "top": 25.5,
      }
    }
  >
    <Counter
      end={0}
      start={0}
      style={
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
          "fontWeight": "500",
        }
      }
      time={500}
    />
  </View>
</View>
`;

exports[`SubmissionGraph renders undefined label 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Circle
      animated={true}
      borderColor="#008EE2"
      borderWidth={0}
      color="#008EE2"
      progress={0}
      showsText={false}
      size={70}
      testID="submissions.submission-graph.submissions.submissionGraph.undefined-progress-view"
      thickness={7}
      unfilledColor="#F5F5F5"
    />
  </View>
  <Text
    style={
      Object {
        "flex": 1,
        "fontSize": 12,
        "fontWeight": "500",
        "marginTop": 8,
        "textAlign": "center",
      }
    }
    testID="submissions.submission-graph.submissions.submissionGraph.undefined-title-lbl"
  />
  <View
    style={
      Object {
        "flex": 1,
        "position": "absolute",
        "top": 25.5,
      }
    }
  >
    <Counter
      end={0}
      start={0}
      style={
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
          "fontWeight": "500",
        }
      }
      time={500}
    />
  </View>
</View>
`;
